--- a/ethnode/webui/mixins/educations/education-main-information.jade
+++ b/ethnode/webui/mixins/educations/education-main-information.jade
@@ -4,9 +4,9 @@
         img(src="images/education.jpg", alt="Aspire")
 
     .position-information
-        h4 Public Policy
-        h5 Harvard University
-        p 2009 - 2013
+        h4.study-field Public Policy
+        h5.education-name Harvard University
+        p.date-name 2009 - 2013
 
 .education-description.col-lg-8.col-md-7.col-sm-8.col-xs-12
     .dropdown.more
@@ -16,4 +16,4 @@
             li: a(href="#", data-toggle="modal", data-target="#accomplishmentModal") Add Accomplishment
             li: a(href="") Edit
 
-    p.education-paragraph Conceived and built a next generation professional showcase for people who want a better way to show off their skills and character. Aspire raises the bar to create value for people every step of the way.
+    p.education-paragraph.description Conceived and built a next generation professional showcase for people who want a better way to show off their skills and character. Aspire raises the bar to create value for people every step of the way.
