--- a/ethnode/webui/mixins/jobs/default-job.jade
+++ b/ethnode/webui/mixins/jobs/default-job.jade
@@ -16,4 +16,4 @@
         li.mdl-menu__item.open-modal(open-modal="#edit-job") Edit Job
         li.mdl-menu__item(disabled) Delete
 
-    p.description-name I worked on a major data migration project
+    p.description I worked on a major data migration project
