--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -10,17 +10,13 @@
 @import "timeline-post"
 @import "timeline-add-photos"
 
-// IMPORTING NEW STYLES
+// IMPORTING NEW STYLES FOR MODALS
 @import "newstyles/modals"
-
-// IMPORTING NEW STYLES
-@import "newstyles/modals-content"
 
 // Responsiveness
 @import "responsive/screen-medium"
 @import "responsive/screen-small"
 @import "responsive/screen-mobile"
-
 
 
 *
@@ -40,13 +36,6 @@ body header.main-header
     z-index: 20
     box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1)
 
-.modal-content
-    margin-bottom: 25px
-    margin-top: 25px
-
-.modal
-    top: 0 !important
-
 .panel-collapse
     padding-right: 0
     padding-left: 0
@@ -61,13 +50,6 @@ body header.main-header
 .educations .education .education-description .dropdown.more img
     margin-right: 25px
 
-.bullet-points, .dropdown.more
-    cursor: pointer
-
-#jobs
-    .job, .education
-        display: none
-
 #accordion
     padding-right: 0
     padding-left: 0
@@ -80,8 +62,6 @@ body header.main-header
         padding-right: 0
         padding-left: 0
 
-.shoutoutIcon
-    display: none
 
 .owl-wrapper
     margin-top: 0 !important
@@ -97,8 +77,6 @@ p.no-accomplishments
 .collapsing
     transition: height 1s
 
-.modal
-    top: 70px
 
 .navbar-toggle
     margin-top: 15px
