--- a/ethnode/webui/styles/profile-documentation-tabs.sass
+++ b/ethnode/webui/styles/profile-documentation-tabs.sass
@@ -18,12 +18,10 @@ section.documentation .container .profile-information-after-fixed .container-flu
 
         ul.nav
 
-            li
+            li:not(.mdl-menu__item)
 
-                &:hover,
-                &:focus,
-                &:active
-                    border-bottom: 2px solid #127fff
+                &:hover, &:focus, &:active
+                    border-bottom: 2px solid #89ABE3
 
                 a
                     color: #4a4a4a
@@ -32,80 +30,34 @@ section.documentation .container .profile-information-after-fixed .container-flu
                     font-weight: 500
                     border: none
                     padding: 20px 30px 20px 30px
+                    border-radius: 6px 6px 0 0
 
-                    &:hover,
-                    &:focus,
-                    &:active
+                    &:hover, &:focus, &:active
                         background-color: white
                         border: none
-                        color: #127fff
+                        color: #89ABE3
 
-            li.active
-                border-bottom: 2px solid #127fff
+            li.active:not(.mdl-menu__item)
+                border-bottom: 2px solid #89ABE3
 
                 a
-                    color: #127fff
+                    color: #89ABE3
 
+            li.dropdownButton
+                float: right
+                width: 60px
+                height: 60px
+                border-bottom: none
+                background-color: rgba(242, 221, 222, 0.30)
+                transition: background-color 0.3s ease-in
 
-        .plusIcon, .shoutoutIcon
-            position: absolute
-            width: 52px
-            height: 50px
-            box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2)
-            background-color: #ffb230
-            border-radius: 100%
-            right: 28px
-            top: 32px
-            z-index: 11
-            text-align: center
+                &:hover, &:focus, &:active
+                    border-bottom: none
+                    background-color: rgba(242, 221, 222, 0.70)
 
-            &:hover,
-            &:focus,
-            &:active
-                background-color: #d8921d
-                box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2)
-                cursor: pointer
-
-            i
-                line-height: 50px
-                font-size: 24px
-                color: white
-
-        .shoutoutIcon
-            background-color: #127fff
-            text-align: center
-
-            i
-                line-height: 50px
-                font-size: 18px
-                color: white
-                margin-left: 5px
-
-            &:hover,
-            &:focus,
-            &:active
-                background-color: #1174e7
-
-        ul.dropdown-menu
-            left: auto
-            min-width: 270px
-            border-radius: 0
-            border: 1px solid #e1e8ee
-            padding: 0
-            top: 15px
-            right: 15px
-            z-index: 3000
-
-            li
-                a
-                    font-size: 16px
-                    font-weight: 500
-                    color: #86939e
-                    line-height: 45px
-                    padding: 0 25px
-
-                    &:hover,
-                    &:focus,
-                    &:active
-                        color: #127fff
-                        background-color: #edf3fa
+                button#addThings
+                    margin: 0 auto
+                    height: 60px
+                    width: 60px
+                    display: block
+                    background: none
