--- a/ethnode/webui/mixins/modals/edit-job.jade
+++ b/ethnode/webui/mixins/modals/edit-job.jade
@@ -1,13 +1,13 @@
 #edit-job.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
-        button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored.close-modal-button: i.material-icons close
+        //- button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored.close-button.close-modal-button: i.material-icons close
 
         .modal-header: h3 Edit job
 
         .success-message
-            h1.success-message__title Congratulations, Dobri!
-            .success-message__content: p Your job was updated. Close the modal to see it.
+            h1.title Congratulations!
+            .success-content: p Your job was updated.
 
             .buttons
                 button.mdl-button.mdl-js-button.close-button.congrats-close Close the modal to see it
@@ -25,13 +25,13 @@
 
             .modal-inputs
 
-                form#form-update-job(action="UPDATE")
+                form#form-update-job(action="POST")
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.left-side
                         input#company-name.mdl-textfield__input(name="company", type="text")
                         label.mdl-textfield__label(for="company-name") Company name
 
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.right-side
-                        input#position.mdl-textfield__input(type="text", name="position")
+                        input#position-name.mdl-textfield__input(type="text", name="position")
                         label.mdl-textfield__label(for="position") Position
 
                     .mdl-textfield.mdl-js-textfield.whole-line
@@ -39,13 +39,14 @@
                         label.mdl-textfield__label(for="description") Description (what have you done or currently do?)
 
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.left-side
-                        input#date-from1.mdl-textfield__input(type="text", name="startDate")
+                        input#date-from1.date-started.mdl-textfield__input(type="text", name="startDate")
                         label.mdl-textfield__label(for="date-from") Start Date
 
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.right-side
-                        input#date-to1.mdl-textfield__input(type="text", name="endDate")
+                        input#date-to1.date-ended.mdl-textfield__input(type="text", name="endDate")
                         label.mdl-textfield__label(for="date-from") End Date (leave blank if ongoing)
 
         .modal-footer
             button.mdl-button.mdl-js-button.close-button Close
-            button.mdl-button.mdl-js-button.publish-button(style="color: #5CAB7D") Update
+            button#update.mdl-button.mdl-js-button.finish-button(style="color: #5CAB7D") Update
+            .mdl-tooltip(data-mdl-for="update") Yo dude.. I think you should fill the form first..
