--- a/ethnode/webui/styles/newstyles/modals.sass
+++ b/ethnode/webui/styles/newstyles/modals.sass
@@ -1,52 +1,17 @@
-// New Modals styles
-button.close-modal-button
-    background: rgba(0, 0, 0, 0.35) !important
-    position: absolute
-    top: 20px
-    left: 20px
+.modal-box-content
 
+    .inner-modal
+        background: white !important
 
-a.modal-button-toggle
-    display: none
+        .content
+            width: 22.5%
 
-    &:hover
-        background: #03A9F4
+            @import 'modals/success-message'
 
-    &:active
-        box-shadow: inset 0 0 0.2em rgba(0, 0, 0, 0.3)
+            @import 'modals/header'
+            @import 'modals/body'
+            @import 'modals/footer'
 
-    &.opened
-        display: block
-        top: -230px
-        left: -80px
-        transform: rotate(-45deg)
-        transform-origin: 750%
-
-        text-decoration: none
-        color: #fefefe
-        font-size: 2em
-        width: 50px
-        height: 50px
-        text-align: center
-        line-height: 50px
-        border-radius: 50%
-        background: #29B6F6
-        position: fixed
-        z-index: 2
-        top: calc(100% - 75px)
-        left: calc(100% - 75px)
-        transform-origin: 50%
-        transform: rotate(90deg)
-        transition: all .5s ease
-        backface-visibility: hidden
-
-        // ~ .modal-box-content .inner-modal
-        //     width: 200vw
-        //     height: 200vw
-
-        //     .content
-        //         opacity: 1
-        //         transition-delay: .5s
 
 
 .flex.floating
@@ -73,7 +38,6 @@ a.modal-button-toggle
             background: #01579B
             width: 0
             height: 0
-            // transition: all 0.4s ease-in 0.4s
             backface-visibility: hidden
 
             .content
