FINISHED job/education modals. You can now create, edit, update your job or education that you have on your profile.

--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -6,7 +6,7 @@ html(lang='en-US')
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
-        title Aspire
+        title Ethearnal
 
         // START of LINKS
 
@@ -58,11 +58,11 @@ html(lang='en-US')
 
     body
 
-        include mixins/modals/add-job
-        include mixins/modals/edit-job
+        include mixins/modals/new-modals/add-job
+        include mixins/modals/new-modals/edit-job
 
-        include mixins/modals/add-education
-        include mixins/modals/edit-education
+        include mixins/modals/new-modals/add-education
+        include mixins/modals/new-modals/edit-education
 
 
 
